# c_plus_plus_demo

./: CMakeLists.txt  main.cpp
copy/: CopyConstructor.cpp  CopyConstructor.h  CopyOperator.cpp  CopyOperator.h
oo/: Basket.cpp  Basket.h  Quote.cpp  Quote.h
queryText/: AndQuery.h  BinaryQuery.h  NotQuery.h  OrQuery.h  Query.cpp  Query.h  QueryResult.h  QueryText.cpp  QueryText.h  WordQuery.h
